--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.datasource.url=jdbc:mysql://localhost:3306/ezsales?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ezsales
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
